--- a/product_catalog/pom.xml
+++ b/product_catalog/pom.xml
@@ -61,6 +61,10 @@
 			<artifactId>mapstruct</artifactId>
 			<version>1.3.1.Final</version>
 		</dependency>
+		 <dependency>
+	      <groupId>org.springframework.boot</groupId>
+	      <artifactId>spring-boot-starter-validation</artifactId>
+    	</dependency>
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
