--- a/product_catalog/pom.xml
+++ b/product_catalog/pom.xml
@@ -99,6 +99,28 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
+		<!--microservice-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+		</dependency>
+		<dependency>
+		   <groupId>org.springframework.cloud</groupId>
+		   <artifactId>spring-cloud-starter-bootstrap</artifactId>
+		</dependency>
+		<!--microservice-->
+		
+		
+		
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
