--- a/product_catalog/src/main/resources/application.properties
+++ b/product_catalog/src/main/resources/application.properties
@@ -1,5 +1,11 @@
+spring.application.name=product
+server.port=8000
+
 #Db
 spring.datasource.url= jdbc:postgresql://localhost:5432/product-e-commerce
 spring.datasource.username=postgres
 spring.datasource.password=inacio1995
 spring.jpa.hibernate.ddl-auto=update
+
+#config eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
