--- a/user_service/src/main/resources/application.properties
+++ b/user_service/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+#Db
+spring.datasource.url= jdbc:postgresql://localhost:5432/user_service
+spring.datasource.username=postgres
+spring.datasource.password=inacio1995
+spring.jpa.hibernate.ddl-auto=update
