--- a/user_service/src/main/resources/application.properties
+++ b/user_service/src/main/resources/application.properties
@@ -1,5 +1,11 @@
+spring.application.name=user_server
+server.port= 8811
+
 #Db
 spring.datasource.url= jdbc:postgresql://localhost:5432/user_service
 spring.datasource.username=postgres
 spring.datasource.password=inacio1995
 spring.jpa.hibernate.ddl-auto=update
+
+#config eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
