--- a/orders_service/src/main/resources/application.properties
+++ b/orders_service/src/main/resources/application.properties
@@ -1,17 +1,23 @@
-spring.application.name=orders
-server.port=8100
+spring.application.name=order
+server.port= 8100
+
+#Jpa/Hibernate :
+spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2016Dialect
+spring.jpa.hibernate.ddl-auto = update
+
+#h2
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
 
 #config eureka
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-
-#Jpa/Hibernate :
-spring.jpa.show-sql=true
-spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2016Dialect
-spring.jpa.hibernate.ddl-auto = update
 
 #Redis
 spring.session.redis.namespace=session
 spring.session.store-type=redis
 spring.redis.host=localhost
 spring.redis.port=6379
-
