--- a/product_catalog/src/main/resources/application.properties
+++ b/product_catalog/src/main/resources/application.properties
@@ -7,5 +7,7 @@ spring.datasource.username=postgres
 spring.datasource.password=inacio1995
 spring.jpa.hibernate.ddl-auto=update
 
+spring.jpa.show-sql=true
+
 #config eureka
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
